# eventmanager

./: .gitignore  .info  .tmux.conf  CLAUDE.md  Dockerfile  Dockerfile.local  Makefile  README.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  fix_uuids.py  helper  helper2  pyproject.toml  requirements.txt
application/: __init__.py  config.py
application/auth/: forms.py  views.py
application/events/: admin.py  forms.py  models.py  views.py
application/huts/: admin.py  models.py  views.py
application/jobs/: create_user.py
application/models/: config.py  event.py  log.py  user.py
application/modules/: email.py  log.py
application/static/css/: main.css
application/static/js/: main.js
application/static/js/ckeditor-alt/: build-config.js
application/static/js/ckeditor/lang/: de.js  (+1 more)
application/templates/: _hut_calendar_grid.html  _hut_styles.html  _media_consent.html  admin_formular.html  base.html  event_billing.html  event_create.html  event_details.html  event_extra_tickets.html  event_finance.html  event_form.html  event_list.html  event_list_export.html  event_participants.html  events_list.html  formular.html  hut_admin.html  hut_calendar.html  hut_detail.html  huts_list.html  login.html  user_booking.html  user_create.html  user_profile.html
application/templates/admin/: master.html
application/templates/bootstrap/: wtf.html
application/templates/email/: newparticipant.html  newuser.html  resetpassword.html
application/user/: forms.py  views.py
application/views/: config.py  default.py  event.py  log.py  members.py  user.py
configs/: app_docker.wsgi  gunicorn.conf.py  uwsgi_docker.ini
(+7 files in other folders)
